[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/LibreFranklin-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/UI/GameMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="GameMenu" type="HBoxContainer"]
pause_mode = 2
margin_right = 220.0
margin_bottom = 250.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 220.0
margin_bottom = 250.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 220.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Game Menu"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 220.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 40 )

[node name="Options" type="TextureButton" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 220.0
margin_bottom = 142.0
rect_min_size = Vector2( 220, 50 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 220, 50 )
custom_fonts/font = SubResource( 4 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 220.0
margin_bottom = 196.0
rect_min_size = Vector2( 220, 50 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 220, 50 )
custom_fonts/font = SubResource( 5 )
text = "Continue
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 220.0
margin_bottom = 250.0
rect_min_size = Vector2( 220, 50 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/QuitGame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.943848
margin_right = 0.943848
rect_min_size = Vector2( 220, 50 )
custom_fonts/font = SubResource( 4 )
text = "Quit Game
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
